2016-11-07 Philipp Klaus Krause <pkk AT spth.de>

	* configure.ac,
	  configure,
	  src/SDCCasm.c,
	  src/SDCCasm.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/port.h,
	  src/xa51,
	  support/regression/ports/xa51,
	  support/regression/Makefile.in:
	  Kill incomplete, unmaintained xa51 backend.

2016-11-07 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Fix a bug in zeror-divider check.

2016-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdbool.h,
	  src/ds390/gen.c,
	  support/regression/tests/bitopcse.c,
	  support/regression/tests/bool.c,
	  support/regression/tests/bug2942247.c,
	  support/regression/tests/bug3404101.c,
	  support/regression/tests/bug3565757.c:
	  bool for ds390.

2016-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c,
	  src/SDCCloop.c,
	  src/SDCCopt.c,
	  src/port.h,
	  src/*/main.c:
	  Replace all muldiv uses by hasNativeMulFor().

2016-10-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2554.c:
	  Fix a stack corruption issue in stm8 ! code generation, bug #2554.

2016-10-23 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkbank.c
	* sdas/linksrc/lksym.c
          Fix a buffer overflow error in revision #9786.

2016-10-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/*.c,
	  support/regression/ports/*/spec.mk:
	  Cleanup handling of __reentrant in the regression tests, RFE #517.

2016-10-22 Ben Shi <powerstudio1st AT 163 DOT com>

        * sdas/linksrc/lksym.c
          Fix a buffer overflow error in previous commit.

2016-10-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCBBlock.c,
	  src/SDCClabel.c:
	  Fix a bug in BBlock label handling, allows reenabling jump-to-jump optimization for jump tables.

2016-10-17 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkbank.c
	  Fix bug #2549.

2016-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClabel.c: