@@ -1,3 +1,10 @@
+2016-11-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc.c,
+	  src/z80/ralloc.c:
+	  Fix some comments on spilling.
+	* support/regression/tests/bug-2559.c
+
 2016-11-07 Philipp Klaus Krause <pkk AT spth.de>
 
 	* configure.ac,
